-Updated apps databases with namespace attributed to the app and chosen schedule type -Added namespace and deployment delete for delete users and deployment deletefor delete apps -Added HorizontalPodAutoscaler Create and Update methods for random schedulling(Update can take both min and max replicas) -Added method to update deployment with new image and/or new nr of replicas -Removed unused create and delete pod methods -Added docker reg id for kubernetes client to deploy the chosen scheduler(if needed) -Updated CreateNamespace to : 	- Create role and role binding for every namespace(rbac) 	- Create service account and cluster role binding for scheduler 	- Create deployment for scheduler -Added nr of min and max replicas query params on UpdateApp to update the required deployment or autoscaler if app is running -Added new_image query param on UpdateApp if user wants to use a certain image on his app -Added random scheduler code and cmd folder where main function of every scheduler is located(first version) -Updated image for golang when generating Dockerfile -Updated postgres repo for the newly added fields : namespace,schedule_type -Updated swagger
