# server/schedulers/random_scheduler.go
@@ -1,0 +1,238 @@
+package schedulers
+
+import (
+	"context"
+	"errors"
+	"fmt"
+	"log"
+	"math/rand"
+	"time"
+
+	v1 "k8s.io/api/core/v1"
+	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/apimachinery/pkg/labels"
+	"k8s.io/apimachinery/pkg/util/wait"
+	"k8s.io/client-go/informers"
+	"k8s.io/client-go/kubernetes"
+	listersv1 "k8s.io/client-go/listers/core/v1"
+	_ "k8s.io/client-go/plugin/pkg/client/auth"
+	"k8s.io/client-go/rest"
+	"k8s.io/client-go/tools/cache"
+)
+
+// todo schimbat scheduler-ul sa fie altfel
+const schedulerName = "random-scheduler"
+
+type predicateFunc func(node *v1.Node, pod *v1.Pod) bool
+type priorityFunc func(node *v1.Node, pod *v1.Pod) int
+
+// RandomScheduler represents info about RandomScheduler
+type RandomScheduler struct {
+	clientset  *kubernetes.Clientset
+	podQueue   chan *v1.Pod
+	nodeLister listersv1.NodeLister
+	predicates []predicateFunc
+	priorities []priorityFunc
+}
+
+// NewRandomScheduler returns a RandomScheduler
+func NewRandomScheduler(podQueue chan *v1.Pod, quit chan struct{}) RandomScheduler {
+	config, err := rest.InClusterConfig()
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	clientset, err := kubernetes.NewForConfig(config)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	return RandomScheduler{
+		clientset:  clientset,
+		podQueue:   podQueue,
+		nodeLister: initInformers(clientset, podQueue, quit),
+		predicates: []predicateFunc{
+			randomPredicate,
+		},
+		priorities: []priorityFunc{
+			randomPriority,
+		},
+	}
+}
+
+func initInformers(clientset *kubernetes.Clientset, podQueue chan *v1.Pod, quit chan struct{}) listersv1.NodeLister {
+	factory := informers.NewSharedInformerFactory(clientset, 0)
+
+	nodeInformer := factory.Core().V1().Nodes()
+	nodeInformer.Informer().AddEventHandler(cache.ResourceEventHandlerFuncs{
+		AddFunc: func(obj interface{}) {
+			node, ok := obj.(*v1.Node)
+			if !ok {
+				log.Println("this is not a node")
+				return
+			}
+			log.Printf("New Node Added to Store: %s", node.GetName())
+		},
+	})
+
+	podInformer := factory.Core().V1().Pods()
+	podInformer.Informer().AddEventHandler(cache.ResourceEventHandlerFuncs{
+		AddFunc: func(obj interface{}) {
+			pod, ok := obj.(*v1.Pod)
+			if !ok {
+				log.Println("this is not a pod")
+				return
+			}
+			if pod.Spec.NodeName == "" && pod.Spec.SchedulerName == schedulerName {
+				podQueue <- pod
+			}
+		},
+	})
+
+	factory.Start(quit)
+	return nodeInformer.Lister()
+}
+
+func (s *RandomScheduler) Run(quit chan struct{}) {
+	wait.Until(s.ScheduleOne, 0, quit)
+}
+
+// ScheduleOne gets pod from channel and tries to bind it to a node
+func (s *RandomScheduler) ScheduleOne() {
+
+	p := <-s.podQueue
+	fmt.Println("found a pod to schedule:", p.Namespace, "/", p.Name)
+
+	node, err := s.findFit(p)
+	if err != nil {
+		log.Println("cannot find node that fits pod", err.Error())
+		return
+	}
+
+	err = s.bindPod(p, node)
+	if err != nil {
+		log.Println("failed to bind pod", err.Error())
+		return
+	}
+
+	message := fmt.Sprintf("Placed pod [%s/%s] on %s\n", p.Namespace, p.Name, node)
+
+	err = s.emitEvent(p, message)
+	if err != nil {
+		log.Println("failed to emit scheduled event", err.Error())
+		return
+	}
+
+	fmt.Println(message)
+}
+
+func (s *RandomScheduler) findFit(pod *v1.Pod) (string, error) {
+	nodes, err := s.nodeLister.List(labels.Everything())
+	if err != nil {
+		return "", err
+	}
+
+	filteredNodes := s.runPredicates(nodes, pod)
+	if len(filteredNodes) == 0 {
+		return "", errors.New("failed to find node that fits pod")
+	}
+	priorities := s.prioritize(filteredNodes, pod)
+	return s.findBestNode(priorities), nil
+}
+
+func (s *RandomScheduler) bindPod(p *v1.Pod, node string) error {
+	return s.clientset.CoreV1().Pods(p.Namespace).Bind(context.Background(), &v1.Binding{
+		ObjectMeta: metav1.ObjectMeta{
+			Name:      p.Name,
+			Namespace: p.Namespace,
+		},
+		Target: v1.ObjectReference{
+			APIVersion: "v1",
+			Kind:       "Node",
+			Name:       node,
+		},
+	}, metav1.CreateOptions{})
+}
+
+func (s *RandomScheduler) emitEvent(p *v1.Pod, message string) error {
+	timestamp := time.Now().UTC()
+	_, err := s.clientset.CoreV1().Events(p.Namespace).Create(context.Background(), &v1.Event{
+		Count:          1,
+		Message:        message,
+		Reason:         "Scheduled",
+		LastTimestamp:  metav1.NewTime(timestamp),
+		FirstTimestamp: metav1.NewTime(timestamp),
+		Type:           "Normal",
+		Source: v1.EventSource{
+			Component: schedulerName,
+		},
+		InvolvedObject: v1.ObjectReference{
+			Kind:      "Pod",
+			Name:      p.Name,
+			Namespace: p.Namespace,
+			UID:       p.UID,
+		},
+		ObjectMeta: metav1.ObjectMeta{
+			GenerateName: p.Name + "-",
+		},
+	}, metav1.CreateOptions{})
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *RandomScheduler) runPredicates(nodes []*v1.Node, pod *v1.Pod) []*v1.Node {
+	filteredNodes := make([]*v1.Node, 0)
+	for _, node := range nodes {
+		if s.predicatesApply(node, pod) {
+			filteredNodes = append(filteredNodes, node)
+		}
+	}
+	log.Println("nodes that fit:")
+	for _, n := range filteredNodes {
+		log.Println(n.Name)
+	}
+	return filteredNodes
+}
+
+func (s *RandomScheduler) predicatesApply(node *v1.Node, pod *v1.Pod) bool {
+	for _, predicate := range s.predicates {
+		if !predicate(node, pod) {
+			return false
+		}
+	}
+	return true
+}
+
+func randomPredicate(node *v1.Node, pod *v1.Pod) bool {
+	r := rand.Intn(2)
+	return r == 0
+}
+
+func (s *RandomScheduler) prioritize(nodes []*v1.Node, pod *v1.Pod) map[string]int {
+	priorities := make(map[string]int)
+	for _, node := range nodes {
+		for _, priority := range s.priorities {
+			priorities[node.Name] += priority(node, pod)
+		}
+	}
+	log.Println("calculated priorities:", priorities)
+	return priorities
+}
+
+func (s *RandomScheduler) findBestNode(priorities map[string]int) string {
+	var maxP int
+	var bestNode string
+	for node, p := range priorities {
+		if p > maxP {
+			maxP = p
+			bestNode = node
+		}
+	}
+	return bestNode
+}
+
+func randomPriority(node *v1.Node, pod *v1.Pod) int {
+	return rand.Intn(100)
+}
